plugins/stock-ticker/1.0.2/chat.md
# Chat Log — Stock Ticker v1.0.2

> Generated by Plugin Studio on 2026-03-23

---

## You

Can you create a plugin with stock ticker? Are there any free api:s for that?

---

## Claude

# Stock Ticker Widget

## Free APIs for Stock Data

Here are the best free options:

| API | Free Tier | Notes |
|-----|-----------|-------|
| **Finnhub** | 60 req/min | Requires free API key |
| **Alpha Vantage** | 25 req/day | Requires free API key |
| **Yahoo Finance (unofficial)** | Unlimited | No key needed, but unofficial |
| **Twelve Data** | 800 req/day | Requires free API key |

I'll use **Finnhub** (free tier, reliable, real-time quotes) — you just need to grab a free key at [finnhub.io](https://finnhub.io). I'll also include a **demo mode with sample data** so it works right away!

---

[Plugin code — see plugin.js]

---

## How to Set Up

1. **Paste the plugin** into your dashboard
2. **Works immediately** in demo mode (orange dot = demo)
3. **For live data:**
   - Go to [finnhub.io](https://finnhub.io) → sign up free
   - Copy your API key
   - Edit the widget config → set `apiKey: "your_key_here"`
4. Green dot = live data 🟢

## Customization via `defaultConfig`

| Option | Default | Description |
|--------|---------|-------------|
| `symbols` | `["AAPL","MSFT",…]` | Array of ticker symbols |
| `apiKey` | `""` | Your Finnhub free API key |
| `refreshInterval` | `30` | Seconds between auto-refresh |
| `currency` | `"USD"` | Display currency label |

You can add any symbol Finnhub supports — stocks, ETFs (e.g. `"SPY"`, `"QQQ"`), even crypto like `"BINANCE:BTCUSDT"`.

---

## You

It has stopped working

---

## Claude

Looking at the code, I can see the issue — the widget uses bare `fetch()` instead of `api.fetch()`, which will fail due to CORS restrictions when calling the Finnhub API. Let me fix that!

[Plugin code — see plugin.js]

### What I fixed

1. **`fetch()` → `api.fetch()`** — The original used the browser's native `fetch()` directly, which gets blocked by CORS when calling external APIs. `api.fetch()` routes through the dashboard's built-in proxy, bypassing that restriction.

2. **`document.getElementById()` → `container.querySelector()`** — Scoped all DOM lookups to the widget's container instead of the whole document, which is safer if multiple widgets are on the same page.

---

## You

pluginProxy.js:101 
 GET http://localhost:5173/__proxy__?url=https%3A%2F%2Ffinnhub.io%2Fapi%2Fv1%2Fquote%3Fsymbol%3DNVDA%26token%3Dd28boahr01qjsuf2f44gd28boahr01qjsuf2f450 429 (Too Many Requests)
proxyFetch	@	pluginProxy.js:101
fetch	@	pluginLoader.js:274
fetchFinnhub	@	VM7650:172
refresh	@	VM7650:202
await in refresh		
render	@	VM7650:221
mount	@	WidgetCard.jsx:277
(anonymous)	@	WidgetCard.jsx:305
<WidgetCard>		
(anonymous)	@	DashboardPanel.jsx:216
DashboardPanel	@	DashboardPanel.jsx:198
<DashboardPanel>		
App	@	App.jsx:643
<App>		
(anonymous)	@	main.jsx:8

---

## Claude

The API is working — you're just hitting Finnhub's **rate limit** (60 requests/minute on the free tier). With 5 stocks refreshing every 30 seconds, requests pile up fast. I'll fix this by:

1. **Adding delay between requests** (already there but too short)
2. **Slowing the refresh rate** and staggering calls more
3. **Caching last good data** so a 429 doesn't wipe the display
4. **Showing a rate-limit warning** instead of silently failing

[Plugin code — see plugin.js]

### What changed

| Fix | Detail |
|-----|--------|
| **Min refresh = 60s** | `Math.max(60, ...)` prevents accidentally setting an interval too short for Finnhub's free tier |
| **1s gap between requests** | Increased from 300ms → 1000ms, so 5 stocks takes 5s total — well within 60 req/min |
| **429 detection** | Checks `r.status === 429` specifically and throws `'RATE_LIMIT'` |
| **In-memory cache** | Last good quote is cached per symbol — a 429 shows stale data instead of blanking |
| **Early loop exit on 429** | Stops firing more requests immediately when rate-limited |
| **Orange dot + message** | Clear UI feedback when rate-limited vs. a real error |

---
